# jaccard-similarity-service

./: .env-example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2023_07_14_1920_create_item_and_searchresult.py
items/: items_pb2.py  items_pb2_grpc.py  models.py  server.py  services.py  test_items.py
protobufs/: items.proto  items_pb2.py  items_pb2_grpc.py
tests/: test_items.py
utils/: jaccard_similarity.py
